# pixify

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  nginx.conf
.github/workflows/: rust.yml
server/: Cargo.toml  Dockerfile
server/benches/: bench.rs
server/src/: error.rs  lib.rs  main.rs
server/src/api/: image.rs  routes.rs
server/src/embroidery/: canvas.rs  colors.rs  image.rs  mod.rs
server/src/http/: multipart.rs
server/tests/: integration_tests.rs
src/: error.rs  image.rs  lib.rs  main.rs  routes.rs
src/api/: colors.rs  embroidery_canvas.rs  image.rs  mod.rs  routes.rs  stitching_image.rs  tests.rs
src/embroidery/: canvas.rs  mod.rs
tests/: integration_tests.rs
web/: .eslintrc.json  eslint.config.mjs  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json
web/.husky/: pre-commit
web/src/: App.css  App.tsx  index.html  index.tsx
web/src/components/CanvasMenu/: CanvasMenu.css  CanvasMenu.tsx  CanvasSelector.tsx  ClearHistoryButton.tsx  PrintCanvasButton.tsx
web/src/components/ColorSelector/: ColorSelector.css  ColorSelector.tsx
web/src/components/EmbroideryCanvas/: ColorSelector.tsx  EmbroideryCanvas.css  EmbroideryCanvas.tsx  EmbroideryCell.css  EmbroideryCell.tsx  EmbroideryRow.tsx
web/src/components/ImageUpload/: ImageForm.tsx
web/src/components/SaveMenu/: MenuButton.tsx  SaveButton.tsx  SaveMenu.tsx
web/src/contexts/: paletteContext.tsx
web/src/hooks/: useColorContextMenu.ts  useOverlay.tsx  useSelectedCell.ts
web/src/services/: canvasService.ts  imageService.ts  storageService.ts
(+7 files in other folders)
