[package]
name = "pixify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pixify"

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
thiserror = "2.0"
image = { version = "0.25.6", features = ["png"] }
lab = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
palette_extract = "=0.1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false